# desktoggle

./: .gitignore  COPYING  Makefile  README  README.md  README.rst  desktoggle.1  desktoggle.1.asciidoc  desktoggle.1.rst  desktoggle.1.rst.in  desktoggle.c  desktoggle.h.in  meson.build
desktoggle/: Makefile  desktoggle.c
